--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -4031,3 +4031,11 @@ WordPress plugin image-gallery-with-slideshow:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-1002011 https://nvd.nist.gov/vuln/detail/CVE-2017-1002012 https://nvd.nist.gov/vuln/detail/CVE-2017-1002013 https://nvd.nist.gov/vuln/detail/CVE-2017-1002014 https://nvd.nist.gov/vuln/detail/CVE-2017-1002015 http://www.vapidlabs.com/advisory.php?v=189'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin woo-preview-emails:
+  1:
+    location: ['/wp-content/plugins/woo-preview-emails/readme.txt']
+    secure_version: '2.0.0'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-42363 https://www.wordfence.com/blog/2021/11/woocommerce-extension-reflected-xss-vulnerability/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
