--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -4068,3 +4068,11 @@ WordPress plugin mycred:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-20008 https://plugins.trac.wordpress.org/changeset/1639363/mycred'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin variation-swatches-for-woocommerce:
+  1:
+    location: ['/wp-content/plugins/variation-swatches-for-woocommerce/readme.txt']
+    secure_version: '2.1.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-42367 https://www.wordfence.com/blog/2021/12/xss-vulnerability-patched-in-plugin-designed-to-enhance-woocommerce/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
