--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -4081,3 +4081,11 @@ WordPress plugin variation-swatches-for-woocommerce:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-42367 https://www.wordfence.com/blog/2021/12/xss-vulnerability-patched-in-plugin-designed-to-enhance-woocommerce/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin contact-form-entries:
+  1:
+    location: ['/wp-content/plugins/contact-form-entries/readme.txt']
+    secure_version: '1.2.4'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-25079 https://secsi.io/blog/cve-2021-25079-multiple-reflected-xss-in-contact-form-entries-plugin/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
