--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -123,20 +123,21 @@
 # https://drupal.org/SA-CORE-2021-011   CVE-2021-41164/CVE-2021-4116    9.2.9/9.1.14/8.9.20
 # https://drupal.org/SA-CORE-2022-001   CVE-2021-41183  9.3.3/9.2.11/7.86
 # https://drupal.org/SA-CORE-2022-002   CVE-2010-5312/CVE-2016-7103/CVE-2021-41182/CVE-2021-41183   7.86
+# https://drupal.org/SA-CORE-2022-003   CVE-2022-25271  9.3.6/9.2.13/7.88
 Drupal 9.3:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '9.3.3'
+    secure_version: '9.3.6'
     regexp: ['  const VERSION.*?(?P<version>9\.2\.[0-9]{1,})']
-    cve: 'https://drupal.org/SA-CORE-2022-001'
+    cve: 'https://drupal.org/SA-CORE-2022-003'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 9.2:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '9.2.11'
+    secure_version: '9.2.13'
     regexp: ['  const VERSION.*?(?P<version>9\.2\.[0-9]{1,})']
-    cve: 'https://drupal.org/SA-CORE-2022-001'
+    cve: 'https://drupal.org/SA-CORE-2022-003'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 9.1:
@@ -150,7 +151,7 @@ Drupal 9.1:
 Drupal 9.0:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '9.3.3'
+    secure_version: '9.3.6'
     regexp: ['  const VERSION.*?(?P<version>9\.0\.[0-9]{1,})']
     cve: 'Drupal 9.0 is end of life.'
     fingerprint: detect_general
@@ -166,9 +167,9 @@ Drupal 8.9:
 Drupal 7:
   1:
     location: ['/includes/bootstrap.inc']
-    secure_version: '7.86'
+    secure_version: '7.88'
     regexp: ['define.*?VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://drupal.org/SA-CORE-2022-002'
+    cve: 'https://drupal.org/SA-CORE-2022-003'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 6:
