--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -4142,3 +4142,11 @@ WordPress plugin php-everywhere:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2022-24663 https://nvd.nist.gov/vuln/detail/CVE-2022-24664 https://nvd.nist.gov/vuln/detail/CVE-2022-24665 https://www.wordfence.com/blog/2022/02/critical-vulnerabilities-in-php-everywhere-allow-remote-code-execution/ https://www.bleepingcomputer.com/news/security/php-everywhere-rce-flaws-threaten-thousands-of-wordpress-sites/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin photoswipe-masonry:
+  1:
+    location: ['/wp-content/plugins/photoswipe-masonry/readme.txt']
+    secure_version: '1.2.15'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2022-0750 https://www.wordfence.com/blog/2022/02/stored-cross-site-scripting-vulnerability-patched-in-a-wordpress-photo-gallery-plugin/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
