--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -199,9 +199,9 @@ MediaWiki 1.37:
 MediaWiki 1.36:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.36.4'
+    secure_version: '1.37.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.36\.[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2022-28201 https://nvd.nist.gov/vuln/detail/CVE-2022-28202 https://nvd.nist.gov/vuln/detail/CVE-2022-28203 https://nvd.nist.gov/vuln/detail/CVE-2022-28204 https://lists.wikimedia.org/hyperkitty/list/mediawiki-announce@lists.wikimedia.org/thread/YJNXKPV5Z56NSUQ4G3SXPDUIZG5EQ7UR/'
+    cve: 'MediaWiki 1.36 is end of life.'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.35:
