--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -4206,3 +4206,11 @@ WordPress plugin nextgen-galery:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-1784 https://nvd.nist.gov/vuln/detail/CVE-2015-1785 https://blog.nettitude.com/uk/crsf-and-unsafe-arbitrary-file-upload-in-nextgen-gallery-plugin-for-wordpress'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin user-meta:
+  1:
+    location: ['/wp-content/plugins/user-meta/readme.txt']
+    secure_version: '2.4.4'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2022-0779 https://lists.openwall.net/full-disclosure/2022/05/28/1'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
