--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -4234,3 +4234,11 @@ WordPress plugin transposh-translation-filter-for-wordpress:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-24911'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin yith-woocommerce-gift-cards-premium:
+  1:
+    location: ['/wp-content/plugins/yith-woocommerce-gift-cards-premium/readme.txt']
+    secure_version: '3.20.0'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2022-45359 https://www.wordfence.com/blog/2022/12/psa-yith-woocommerce-gift-cards-premium-plugin-exploited-in-the-wild/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
