--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -136,13 +136,30 @@
 # https://drupal.org/SA-CORE-2022-013   CVE-2022-25278  9.4.3/9.3.19
 # https://drupal.org/SA-CORE-2022-014   CVE-2022-25277  9.4.3/9.3.19
 # https://drupal.org/SA-CORE-2022-015   CVE-2022-25276  9.4.3/9.3.19
-# https://drupal.org/SA-CORE-2022-016   TODO
+# https://drupal.org/SA-CORE-2022-016   CVE-2022-39261  9.4.79.3.22
+# https://drupal.org/SA-CORE-2023-001   TODO            10.0.2/9.5.2/9.4.10
+Drupal 10.0:
+  1:
+    location: ['/core/lib/Drupal.php']
+    secure_version: '1.0.2'
+    regexp: ['  const VERSION.*?(?P<version>10\.0\.[0-9]{1,})']
+    cve: 'https://drupal.org/SA-CORE-2023-001'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+Drupal 9.5:
+  1:
+    location: ['/core/lib/Drupal.php']
+    secure_version: '9.5.2'
+    regexp: ['  const VERSION.*?(?P<version>9\.5\.[0-9]{1,})']
+    cve: 'https://drupal.org/SA-CORE-2023-001'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
 Drupal 9.4:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '9.4.3'
+    secure_version: '9.4.10'
     regexp: ['  const VERSION.*?(?P<version>9\.4\.[0-9]{1,})']
-    cve: 'https://drupal.org/SA-CORE-2022-012 https://drupal.org/SA-CORE-2022-013 https://drupal.org/SA-CORE-2022-014 https://drupal.org/SA-CORE-2022-015'
+    cve: 'https://drupal.org/SA-CORE-2023-001'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 9.3:
