--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -138,28 +138,31 @@
 # https://drupal.org/SA-CORE-2022-015   CVE-2022-25276  9.4.3/9.3.19
 # https://drupal.org/SA-CORE-2022-016   CVE-2022-39261  9.4.79.3.22
 # https://drupal.org/SA-CORE-2023-001   TODO            10.0.2/9.5.2/9.4.10
+# https://drupal.org/SA-CORE-2023-002   TODO            10.0.5/9.5.5/9.4.12
+# https://drupal.org/SA-CORE-2023-003   TODO            10.0.5/9.5.5/9.4.12
+# https://drupal.org/SA-CORE-2023-004   TODO            10.0.5/9.5.5/9.4.12/7.95
 Drupal 10.0:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '1.0.2'
+    secure_version: '10.0.5'
     regexp: ['  const VERSION.*?(?P<version>10\.0\.[0-9]{1,})']
-    cve: 'https://drupal.org/SA-CORE-2023-001'
+    cve: 'https://drupal.org/SA-CORE-2023-002 https://drupal.org/SA-CORE-2023-003 https://drupal.org/SA-CORE-2023-004'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 9.5:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '9.5.2'
+    secure_version: '9.5.5'
     regexp: ['  const VERSION.*?(?P<version>9\.5\.[0-9]{1,})']
-    cve: 'https://drupal.org/SA-CORE-2023-001'
+    cve: 'https://drupal.org/SA-CORE-2023-002 https://drupal.org/SA-CORE-2023-003 https://drupal.org/SA-CORE-2023-004'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 9.4:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '9.4.10'
+    secure_version: '9.4.12'
     regexp: ['  const VERSION.*?(?P<version>9\.4\.[0-9]{1,})']
-    cve: 'https://drupal.org/SA-CORE-2023-001'
+    cve: 'https://drupal.org/SA-CORE-2023-002 https://drupal.org/SA-CORE-2023-003 https://drupal.org/SA-CORE-2023-004'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 9.3:
@@ -205,9 +208,9 @@ Drupal 8.9:
 Drupal 7:
   1:
     location: ['/includes/bootstrap.inc']
-    secure_version: '7.91'
+    secure_version: '7.95'
     regexp: ['define.*?VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://drupal.org/SA-CORE-2022-012'
+    cve: 'https://drupal.org/SA-CORE-2023-002 https://drupal.org/SA-CORE-2023-003 https://drupal.org/SA-CORE-2023-004'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 6:
