--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -4260,3 +4260,11 @@ WordPress plugin quick-restaurant-menu:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2023-0550 https://nvd.nist.gov/vuln/detail/CVE-2023-0554 https://nvd.nist.gov/vuln/detail/CVE-2023-0555 https://www.wordfence.com/blog/2023/02/multiple-vulnerabilities-patched-in-quick-restaurant-menu-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin gn-publisher:
+  1:
+    location: ['/wp-content/plugins/watu/readme.txt']
+    secure_version: '1.5.6'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2023-1080 https://www.wordfence.com/blog/2023/03/multiple-reflected-cross-site-scripting-vulnerabilities-in-three-wordpress-plugins-patched/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
