--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -4301,3 +4301,11 @@ WordPress plugin real-time-find-and-replace:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-13641 https://www.wordfence.com/blog/2020/04/high-severity-vulnerability-patched-in-real-time-find-and-replace-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wpgateway:
+  1:
+    location: ['/wp-content/plugins/wpgateway/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2022-3180 https://www.wordfence.com/blog/2022/09/psa-zero-day-vulnerability-in-wpgateway-actively-exploited-in-the-wild/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
