Added support for WordPress plugin wp-data-access

--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -4318,3 +4318,11 @@ WordPress plugin royal-elementor-addons:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2022-4700 https://nvd.nist.gov/vuln/detail/CVE-2022-4701 https://nvd.nist.gov/vuln/detail/CVE-2022-4702 https://nvd.nist.gov/vuln/detail/CVE-2022-4703 https://nvd.nist.gov/vuln/detail/CVE-2022-4704 https://nvd.nist.gov/vuln/detail/CVE-2022-4705 https://nvd.nist.gov/vuln/detail/CVE-2022-4707 https://nvd.nist.gov/vuln/detail/CVE-2022-4708 https://nvd.nist.gov/vuln/detail/CVE-2022-4709 https://nvd.nist.gov/vuln/detail/CVE-2022-4710 https://nvd.nist.gov/vuln/detail/CVE-2022-4711 https://www.wordfence.com/blog/2023/01/eleven-vulnerabilities-patched-in-royal-elementor-addons/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wp-data-access:
+  1:
+    location: ['/wp-content/plugins/wp-data-access/readme.txt']
+    secure_version: '5.3.8'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2023-1874 https://www.wordfence.com/blog/2023/04/privilege-escalation-vulnerability-patched-promptly-in-wp-data-access-wordpress-plugin/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
