--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -4327,3 +4327,19 @@ WordPress plugin wp-data-access:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2023-1874 https://www.wordfence.com/blog/2023/04/privilege-escalation-vulnerability-patched-promptly-in-wp-data-access-wordpress-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin weaver-xtreme:
+  1:
+    location: ['/wp-content/plugins/weaver-xtreme/readme.txt']
+    secure_version: '6.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2023-1403 https://www.wordfence.com/blog/2023/04/hiding-in-plain-sight-cross-site-scripting-vulnerabilities-patched-in-weaver-products/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress plugin show-posts:
+  1:
+    location: ['/wp-content/plugins/show-posts/readme.txt']
+    secure_version: '1.7'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2023-1404 https://www.wordfence.com/blog/2023/04/hiding-in-plain-sight-cross-site-scripting-vulnerabilities-patched-in-weaver-products/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
