--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -4355,7 +4355,7 @@ WordPress plugin advanced-custom-fields:
     location: ['/wp-content/plugins/advanced-custom-fields/readme.txt']
     secure_version: '6.1.6'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2023-30777 https://patchstack.com/articles/reflected-xss-in-advanced-custom-fields-plugins-affecting-2-million-sites'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2023-30777 https://patchstack.com/articles/reflected-xss-in-advanced-custom-fields-plugins-affecting-2-million-sites https://www.bleepingcomputer.com/news/security/wordpress-custom-field-plugin-bug-exposes-over-1m-sites-to-xss-attacks/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin beautiful-and-responsive-cookie-consent:
