--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -4398,3 +4398,11 @@ WordPress plugin payment-gateway-stripe-and-woocommerce-integration:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2023-3162 https://www.wordfence.com/blog/2023/08/webtoffee-addresses-authentication-bypass-vulnerability-in-stripe-payment-plugin-for-woocommerce-wordpress-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wp-simple-firewall:
+  1:
+    location: ['/wp-content/plugins/wp-simple-firewall/readme.txt']
+    secure_version: '17.0.18'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2023-0992 https://nvd.nist.gov/vuln/detail/CVE-2023-0993 https://www.wordfence.com/blog/2023/04/multiple-vulnerabilities-patched-in-shield-security/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
