Added support for WordPress plugin limit-login-attempts

--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -4406,3 +4406,11 @@ WordPress plugin wp-simple-firewall:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2023-0992 https://nvd.nist.gov/vuln/detail/CVE-2023-0993 https://www.wordfence.com/blog/2023/04/multiple-vulnerabilities-patched-in-shield-security/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin limit-login-attempts:
+  1:
+    location: ['/wp-content/plugins/limit-login-attempts/readme.txt']
+    secure_version: '1.7.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2023-1912 https://www.wordfence.com/blog/2023/04/update-now-severe-vulnerability-impacting-600000-sites-patched-in-limit-login-attempts/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
