--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -4433,3 +4433,11 @@ WordPress plugin reviewx:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2023-2833 https://www.wordfence.com/blog/2023/05/wpdeveloper-addresses-privilege-escalation-vulnerability-in-reviewx-wordpress-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin directorist:
+  1:
+    location: ['/wp-content/plugins/directorist/readme.txt']
+    secure_version: '7.5.5'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2023-1888 https://nvd.nist.gov/vuln/detail/CVE-2023-1889 https://www.wordfence.com/blog/2023/06/critical-security-update-directorist-wordpress-plugin-patches-two-high-risk-vulnerabilities/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
