Added comment about missing CVEs

--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -137,7 +137,7 @@
 # https://drupal.org/SA-CORE-2022-014   CVE-2022-25277  9.4.3/9.3.19
 # https://drupal.org/SA-CORE-2022-015   CVE-2022-25276  9.4.3/9.3.19
 # https://drupal.org/SA-CORE-2022-016   CVE-2022-39261  9.4.79.3.22
-# https://drupal.org/SA-CORE-2023-001   TODO            10.0.2/9.5.2/9.4.10
+# https://drupal.org/SA-CORE-2023-001   TODO            10.0.2/9.5.2/9.4.10  # asked about CVEs 2024-03-14
 # https://drupal.org/SA-CORE-2023-002   TODO            10.0.5/9.5.5/9.4.12
 # https://drupal.org/SA-CORE-2023-003   TODO            10.0.5/9.5.5/9.4.12
 # https://drupal.org/SA-CORE-2023-004   TODO            10.0.5/9.5.5/9.4.12/7.95
